despliegue/k8s/namespace.yaml
apiVersion: /v1
kind: Namespace
metadata:
  name: orchestra-namespace
  labels:
    name: orchestra-namespace
